# first-time-contribution-tagger

./: .flake8  .gitignore  README.md  flake.nix  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml
nix/: module.nix  package.nix
src/first_time_contribution_tagger/: __init__.py  pullRequest.py
tests/: test_filterGraphqlOutput.py
